database.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  lables:
    name: database
