nginx-storage.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
  name: nginx-storage
spec:
  containers:
    - image: nginx
    name: nginx
    volumeMounts:
      - mountPath: /scratch
      name: scratch-volume
  volumes:
    - name: scratch-volume
    emptyDir:
      sizeLimit: 500mi
