nginx_example.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
    method: from_code
  name: nginx-yaml
spec:
  containers:
  - image: nginx
    name: nginx
